--- a/base/base.styl
+++ b/base/base.styl
@@ -67,6 +67,9 @@ img, embed, object, video
 	max-width: 100%
 
 //img 
+//	vertical-align: bottom
+//	border: none
+//	display: block
 //	height: auto
 //	width: auto
 
